# minihil

./: README.md  minihil.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  minihil_bug_report.md  minihil_feature_request.md
.github/workflows/: .editorconfig  minihil_desktop_cc_checker.yml  minihil_desktop_cc_checker_build.yml  minihil_device_c_checker.yml  minihil_toc.yml
docs/source/: conf.py  index.rst
sw/minihil-desktop/: main.cc  minihil_desktop.cc  minihil_desktop.h
sw/minihil-device0/: CMakeLists.txt  pico_sdk_import.cmake  pro_auto_set_url.cmake
sw/minihil-device0/src/: CMakeLists.txt  main.c
sw/minihil-device1/: CMakeLists.txt
